Feito endpoint para obter dados da conta e atualizar