@@ -5,6 +5,7 @@ import br.com.cabidiomas.student.user.model.RolesEnum;
 import br.com.cabidiomas.student.user.model.Usuario;
 
 import java.util.Arrays;
+import java.util.List;
 
 public class UsuarioMapper {
 
@@ -13,15 +14,16 @@ public class UsuarioMapper {
             return null;
         }
 
+        assert RolesEnum.getRoleById(dto.getRoleId()) != null;
         return Usuario.builder()
                 .id(dto.getId())
                 .name(dto.getName())
                 .login(dto.getLogin())
                 .password(dto.getPassword())
-                .roles(Arrays.asList(Role.getRolebyEnum(RolesEnum.getRoleById(dto.getRoleId())))).build();
+                .roles(List.of(Role.getRolebyEnum(RolesEnum.getRoleById(dto.getRoleId())))).build();
     }
 
-    public static UsuarioDto dtoToEntity(Usuario entity) {
+    public static UsuarioDto entityToDto(Usuario entity) {
         if(entity == null) {
             return null;
         }
